# Variant-Sudoku-Solver

./: .env.example  .gitignore  README.md
.github/workflows/: rust.yml
variant-sudoku-solver/: Cargo.toml
variant-sudoku-solver/migrations/0001_create_puzzles/: up.sql
variant-sudoku-solver/migrations/0002_create_support_tables/: down.sql  up.sql
variant-sudoku-solver/migrations/0003_seed_puzzles/: down.sql  up.sql
variant-sudoku-solver/src/: board_parser.rs  db.rs  game.rs  importer.rs  local_board_importer.rs  main.rs  variant.rs  variants.rs
variant-sudoku-solver/src/game/: status.rs
variant-sudoku-solver/src/models/: puzzle.rs
variant-sudoku-solver/src/sample_boards/antidiagonal/: 00.csv
variant-sudoku-solver/src/sample_boards/antiking/: 00.csv
variant-sudoku-solver/src/sample_boards/antiknight/: 00.csv
variant-sudoku-solver/src/sample_boards/standard/: 00.csv  01.csv  02.csv
variant-sudoku-solver/src/variants/antidiagonal/: mod.rs  parsing.rs  validation.rs
variant-sudoku-solver/src/variants/antiking/: parsing.rs  validation.rs
variant-sudoku-solver/src/variants/antiknight/: parsing.rs  validation.rs
variant-sudoku-solver/src/variants/common/: utils.rs
variant-sudoku-solver/src/variants/standard/: parsing.rs  validation.rs
variant-sudoku-solver/src/variants/template/: parsing.rs
web/: README.md  package-lock.json  package.json
web/components/: PuzzleGrid.tsx
web/pages/: _app.tsx  index.tsx
web/pages/api/puzzles/: [id].ts  index.ts
web/pages/puzzles/: [id].tsx
web/styles/: globals.css
